# pcman

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/stat/: mod.rs
src/supports/: mod.rs
src/supports/cargo/: mod.rs
src/supports/cargo/clean/: mod.rs
src/supports/rust_analyzer/: mod.rs
src/util/: mod.rs
